2000-09-05  Dan Winship  <danw@helixcode.com>

	* mail-ops.c: Replace mail_do_setup_draftbox,
	mail_do_setup_outbox, and mail_do_setup_sentbox with
	mail_do_setup_folder.
	(do_send_mail, do_send_queue): s/sentbox_folder/sent_folder/

	* component-factory.c (owner_set_cb): Use mail_do_setup_folder,
	rename sentbox_folder to sent_folder, and call
	mail_operation_wait_for_finish after the setup_folder calls in
	case anything needs to use the _folder variables.
	
2000-09-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-format.c (mail_generate_reply): Applied Jesse's patch that
	will append a signature to the replied message text

	* folder-browser-factory.c: Changed "Send & Receieve" back to "Get
	Mail" temporarily so that the toolbar buttons don't all get
	stretched to some weird proportion

2000-09-03  JP Rosevear  <jpr@helixcode.com>

	* mail-config.c (mail_config_add_news): Copy the passed in item
	before adding
	(mail_config_add_source): ditto
	(mail_config_add_identity): ditto

	* mail-config-gui.c (mail_config): We don't actually need a notebook
	pointer.
	(identities_edit_clicked): Don't explicitly destroy, we are using
	gtk_clist_set_data_full now
	(sources_edit_clicked): ditto
	(news_edit_clicked): ditto
	(mail_config): Use gtk_clist_set_row_data_full to kill leaks

2000-09-03  Jeffrey Stedfast  <fejj@helixcode.com>

	* folder-browser-factory.c: Change the "Get Mail" toolbar button
	to become "Send & Receieve"

	* mail-callbacks.c (send_queued_mail): New callback function for
	sending queued mail
	(send_receieve_mail): New callback for Send & Receieve that
	basically just calls send_queued_mail and then fetch_mail

	* mail-ops.c (cleanup_send_mail): Mod to be able to handle a NULL
	composer window
	(setup_send_mail): Modified to handle a NULL composer widget
	(mail_do_send_queue): New convenience async function to send all
	messages in a folder (aka all messages in a queue)

2000-09-02  Jeffrey Stedfast  <fejj@helixcode.com>
